--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dijkstra Explorer</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" media="all" href="assets/bootstrap-3.3.4/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/stylesheets/style.css"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/stylesheets/svg.css"/>
