--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
                                     <ul>
                                         <li>double-click to add a node</li>
                                         <li>drag nodes to reposition them</li>
-                                        <li>right-click on a nodem then right-click on another to link them</li>
+                                        <li>right-click on a node
+                                            then right-click on another to 
+                                            link them
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
