--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
                         </div>
                     </div>
                     <div role="tabpanel" class="tab-pane" id="data-tab">
-                        <div id="distances-table"></div>
+                        <div class="container panel">
+                            <h3>distances</h3>
+                            <div id="distances-table"></div>
+                        </div>
                     </div>
                 </div>
             </div>
