all data tables

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
                     </div>
                     <div role="tabpanel" class="tab-pane" id="data-tab">
                         <div class="container panel">
+                            <h3>nodes</h3>
+                            <div id="nodes-table"></div>
+                            <h3>paths</h3>
+                            <div id="paths-table"></div>
                             <h3>distances</h3>
                             <div id="distances-table"></div>
                         </div>
