removed download link test

--- a/index.html
+++ b/index.html
@@ -126,16 +126,11 @@
                     </div>
                 </div>
             </div>
-
         </div><!-- /rows -->
     </div><!-- /container -->
     <footer class="footer">
         <div class="panel-footer text-center">
-            Want the code? <a href="https://github.com/julianbrowne/dijkstra-explorer">https://github.com/julianbrowne/dijkstra-explorer</a>
-
-
-            <p><a download="stuff.json" href='data:application/json,{"a":10}'>JSON</a></p>
-
+            <p>Want the code? <a href="https://github.com/julianbrowne/dijkstra-explorer">https://github.com/julianbrowne/dijkstra-explorer</a></p>
         </div>
     </footer>
 </body>
