--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="bs-callout borderless text-right">
-                                        <button type="button" class="datamgr btn btn-default btn-lg" data-toggle="popover" data-placement="bottom" data-content="coming soon">
+                                        <button type="button" class="datamgr export btn btn-default btn-lg" data-toggle="popover" data-placement="bottom" data-content="coming soon">
                                             <span class="glyphicon glyphicon-export" aria-hidden="true"></span>
                                             export
                                         </button>
-                                        <button type="button" class="datamgr btn btn-default btn-lg" data-toggle="popover" data-placement="bottom" data-content="coming soon">
+                                        <button type="button" class="datamgr import btn btn-default btn-lg" data-toggle="popover" data-placement="bottom" data-content="coming soon">
                                             <span class="glyphicon glyphicon-import" aria-hidden="true"></span>
                                             import
                                         </button>
