basic import and export

--- a/index.html
+++ b/index.html
@@ -113,10 +113,9 @@
                                             <span class="glyphicon glyphicon-export" aria-hidden="true"></span>
                                             export
                                         </button>
-                                        <button type="button" class="datamgr import btn btn-default btn-lg" data-toggle="popover" data-placement="bottom" data-content="coming soon">
-                                            <span class="glyphicon glyphicon-import" aria-hidden="true"></span>
-                                            import
-                                        </button>
+                                        <span class="btn btn-default btn-lg btn-file glyphicon glyphicon-import">
+                                            import <input type="file" id="data-import" name="data-import" enctype="multipart/form-data">
+                                        </span>
                                     </div><!-- /bs-callout -->
                                     <div class="bs-callout bs-callout-info padding-medium"><h4>nodes</h4></div>
                                     <div id="nodes-table"></div>
