tidy up import/export button html

--- a/index.html
+++ b/index.html
@@ -109,12 +109,11 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="bs-callout borderless text-right">
-                                        <button type="button" class="datamgr export btn btn-default btn-lg" data-toggle="popover" data-placement="bottom" data-content="coming soon">
-                                            <span class="glyphicon glyphicon-export" aria-hidden="true"></span>
-                                            export
-                                        </button>
-                                        <span class="btn btn-default btn-lg btn-file glyphicon glyphicon-import">
-                                            import <input type="file" id="data-import" name="data-import" enctype="multipart/form-data">
+                                        <span class="datamgr btn btn-default btn-lg btn-file glyphicon glyphicon-export">
+                                            <span class="export">export</span>
+                                        </span>
+                                        <span class="datamgr btn btn-default btn-lg btn-file glyphicon glyphicon-import">
+                                            import <input type="file" class="import" name="data-import" enctype="multipart/form-data">
                                         </span>
                                     </div><!-- /bs-callout -->
                                     <div class="bs-callout bs-callout-info padding-medium"><h4>nodes</h4></div>
