--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
         </div>
         <div class="row">
             <div role="tabpanel">
+                <span class="form-inline pull-right">
+                    <form class="graph-bg form-inline">
+                        <label for="graph-bg-url">background: </label>
+                        <input class="form-control" placeholder="url" type="text" id="graph-bg-url" name="graph-bg-url"> or 
+                        <span class="datamgr btn btn-default btn-sm btn-file glyphicon glyphicon-picture">
+                            file<input type="file" class="bg form-control" id="graph-bg-file" name="graph-bg-file" enctype="multipart/form-data">
+                        </span>
+                    </form>
+                </span>
                 <ul class="nav nav-tabs" role="tablist">
                     <li role="presentation" class="active">
                         <a href="#graph-tab" aria-controls="home" role="tab" data-toggle="tab">graph</a>
