--- a/index.html
+++ b/index.html
@@ -46,10 +46,14 @@
                 </span>
                 <ul class="nav nav-tabs" role="tablist">
                     <li role="presentation" class="active">
-                        <a href="#graph-tab" aria-controls="home" role="tab" data-toggle="tab">graph</a>
+                        <a href="#graph-tab" aria-controls="home" role="tab" data-toggle="tab">
+                            Graph
+                        </a>
                     </li>
                     <li role="presentation">
-                        <a href="#data-tab" aria-controls="profile" role="tab" data-toggle="tab">data</a>
+                        <a href="#data-tab" aria-controls="profile" role="tab" data-toggle="tab">
+                            Data
+                        </a>
                     </li>
                 </ul>
                 <div class="tab-content">
@@ -58,27 +62,31 @@
                             <div class="row">
                                 <div class="col-md-3">
                                     <div class="well">
-                                        <h4>routing</h4>
+                                        <h4>Find Path</h4>
                                         <form>
-                                            <div class="form-group">
-                                                <label for="from">from</label>
+                                            <div class="form-group form-inline">
+                                                <label class="control-label bg-success" for="from">from</label>
                                                 <select id="from" class="form-control"></select>
                                             </div>
-                                            <div class="form-group">
-                                                <label for="to">to</label>
+                                            <div class="form-group form-inline">
+                                                <label class="control-label bg-success" for="to">to</label>
                                                 <select id="to" class="form-control"></select>
                                             </div>
-                                            <div class="form-group">
-                                                <button type="button" class="btn btn-warning" data-toggle="tooltip" 
-                                                data-placement="right" title="find shortest path between nodes" 
-                                                onclick="clearGraph()">clear</button>
-                                                <button type="button" class="btn btn-primary" data-toggle="tooltip" 
-                                                data-placement="right" title="find shortest path between nodes" 
-                                                onclick="findRoute()">route</button>
+                                            <div class="form-group btn-group">
+                                                <button
+                                                    type="button" class="btn btn-warning" 
+                                                    data-toggle="tooltip" data-placement="right" 
+                                                    title="clear the graph"
+                                                    onclick="clearGraph()">clear</button>
+                                                <button type="button" class="btn btn-primary" 
+                                                    data-toggle="tooltip" data-placement="right" 
+                                                    title="find shortest path between nodes" 
+                                                    onclick="findRoute()">route</button>
                                             </div>
                                         </form>
                                     </div>
                                     <div class="results well">
+                                        <h4>Graph Data</h4>
                                         <table class="table">
                                             <tr>
                                                 <th class="info">nodes</th>
@@ -89,18 +97,18 @@
                                                 <td id="path-count">-</td>
                                             </tr>
                                         </table>
-                                        <div id="results" class="well"></div>
+                                    </div>
+                                    <div class="results well">
+                                        <h4>Results</h4>
+                                        <div id="results"></div>
                                     </div>
                                     <div class="well">
                                         <h4>Instructions</h4>
-                                        <ul>
-                                            <li>double-click to add a node</li>
-                                            <li>drag nodes to reposition them</li>
-                                            <li>right-click on a node
-                                                then right-click on another to 
-                                                link them
-                                            </li>
-                                        </ul>
+                                        <p>
+                                            Double-click graph to add a node<br/>
+                                            Drag nodes to reposition them<br/>
+                                            Right-click on one node then right-click on another to link them<br/>
+                                        </p>
                                     </div>
                                 </div>
                                 <div class="col-md-9">
@@ -117,20 +125,27 @@
                         <div class="de-container">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <div class="bs-callout borderless text-right">
-                                        <span class="datamgr btn btn-default btn-lg btn-file glyphicon glyphicon-export">
-                                            <span class="export">export</span>
+                                    <div class="bs-callout borderless">
+                                        <span class="datamgr btn-info btn btn-default btn-file glyphicon glyphicon-export">
+                                            <span class="export"><strong>EXPORT</strong></span>
                                         </span>
-                                        <span class="datamgr btn btn-default btn-lg btn-file glyphicon glyphicon-import">
-                                            import <input type="file" class="import" name="data-import" enctype="multipart/form-data">
+                                        <span class="datamgr btn-warning btn btn-default btn-file glyphicon glyphicon-import">
+                                            <strong>IMPORT</strong>
+                                            <input type="file" class="import" name="data-import" enctype="multipart/form-data">
                                         </span>
                                     </div><!-- /bs-callout -->
-                                    <div class="bs-callout bs-callout-info padding-medium"><h4>nodes</h4></div>
-                                    <div id="nodes-table"></div>
-                                    <div class="bs-callout bs-callout-info padding-medium"><h4>paths</h4></div>
-                                    <div id="paths-table"></div>
-                                    <div class="bs-callout bs-callout-info padding-medium"><h4>distances</h4></div>
-                                    <div id="distances-table"></div>
+                                    <div class="well">
+                                        <h4>Graph Nodes</h4>
+                                        <div id="nodes-table"></div>
+                                    </div>
+                                    <div class="well">
+                                        <h4>Paths Between Nodes</h4>
+                                        <div id="paths-table"></div>
+                                    </div>
+                                    <div class="well">
+                                        <h4>Distances Between Nodes</h4>
+                                        <div id="distances-table"></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
