--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <div class="well lead">
-                    <span>LOG : </span>
+                <div class="log well lead">
+                    <span>&nbsp;</span>
                     <span id="info"></span>
                 </div>
             </div>
