added element id to graph-container div to support scrolling

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 </div>
                                 <div class="col-md-9">
                                     <div class="panel panel-default">
-                                        <div class="panel-body">
+                                        <div id="graph-container" class="panel-body">
                                             <div id="graph"></div>
                                         </div>
                                     </div>
